added header, adaptive grid, burger-menu.

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,5 @@
-$dark: #4d4959;
-$antracit: #353738;
-$telegrey: #848789;
-$smoky: #f7f7f7;
+$dark: #393e3a;
+$antracit: #2c302f;
+$silver: #c4c4c4;
+$grey: #666b67;
+$Mouse: #607966;
