--- a/style/style.css
+++ b/style/style.css
@@ -116,11 +116,26 @@ body._lock {
 }
 
 .container {
-  max-width: 1440px;
+  max-width: 1316px;
   padding: 0px 10px;
   margin: 0px auto;
 }
 
+/* .ibg {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+.ibg img {
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+} */
 .ibg {
   background-position: center;
   background-size: cover;
@@ -128,13 +143,6 @@ body._lock {
   position: relative;
 }
 
-/* .ibg img {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  object-fit: cover;
-  object-position: top;
-} */
 .ibg img {
   width: 0;
   height: 0;
@@ -145,90 +153,145 @@ body._lock {
   visibility: hidden;
 }
 
-@font-face {
-  font-family: 'icons';
-  src: url("fonts/icons.ttf?ehm0n5") format("truetype"), url("fonts/icons.woff?ehm0n5") format("woff"), url("fonts/icons.svg?ehm0n5#icons") format("svg");
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
+.wrapper {
+  background: #393e3a;
 }
 
-[class^="_icon-"], [class*=" _icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icons' !important;
-  speak: never;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.header__content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50px;
+  left: 0px;
 }
 
-._icon-icon-1:before {
-  content: "\e900";
+@media (min-width: 479.98px) {
+  .header__body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    max-width: 725px;
+  }
 }
 
-._icon-icon-2:before {
-  content: "\e901";
+@media (max-width: 479.98px) {
+  .menu__body {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    text-align: center;
+    overflow: auto;
+    padding: 60px 0px 0px 0px;
+    background-color: rgba(57, 62, 58, 0.8);
+    -webkit-transform: translate(0px, -100%);
+            transform: translate(0px, -100%);
+    -webkit-transition: all 0.6s ease 0s;
+    transition: all 0.6s ease 0s;
+  }
 }
 
-._icon-icon-3:before {
-  content: "\e902";
+.menu__body.active {
+  -webkit-transform: translate(0px, 0%);
+          transform: translate(0px, 0%);
 }
 
-._icon-icon-4:before {
-  content: "\e903";
+.menu__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-/* 
+.menu__list li {
+  margin: 0px 0px 0px 40px;
+}
+
+@media (max-width: 479.98px) {
+  .menu__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .menu__list li {
+    margin: 0px 0px 30px 0px;
+  }
+}
+
+.menu__link {
+  color: #c4c4c4;
+  font-size: 24px;
+  line-height: 116.66667%;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.menu__link span {
+  color: #607966;
+}
+
+@media (min-width: 991.98px) {
+  .menu__link:hover {
+    color: #607966;
+    line-height: 116.66667%;
+  }
+  .menu__link:hover span {
+    color: #c4c4c4;
+  }
+}
+
 .icon-menu {
   display: none;
-  @media (max-width: $md3+px) {
+}
+
+@media (max-width: 479.98px) {
+  .icon-menu {
     display: block;
-    //position: relative;
     position: absolute;
-    top: 18px;
+    top: 9px;
     right: 10px;
     width: 30px;
     height: 18px;
     cursor: pointer;
     z-index: 5;
-    span {
-      transition: all 0.3s ease 0s;
-      top: calc(50% - 1px);
-      //top: 8px;
-      left: 0px;
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      background-color: #000;
-      &:first-child {
-        top: 0px;
-      }
-      &:last-child {
-        top: auto;
-        bottom: 0px;
-      }
-    }
-    &.active {
-      span {
-        transform: scale(0);
-        &:first-child {
-          transform: rotate(-45deg);
-          //top: 8px;
-          top: calc(50% - 1px);
-        }
-        &:last-child {
-          transform: rotate(45deg);
-          //bottom: 8px;
-          bottom: calc(50% - 1px);
-        }
-      }
-    }
+  }
+  .icon-menu span {
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    top: calc(50% - 1px);
+    left: 0px;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #c4c4c4;
+  }
+  .icon-menu span:first-child {
+    top: 0px;
+  }
+  .icon-menu span:last-child {
+    top: auto;
+    bottom: 0px;
+  }
+  .icon-menu.active span {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  .icon-menu.active span:first-child {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    top: calc(50% - 1px);
+  }
+  .icon-menu.active span:last-child {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    bottom: calc(50% - 1px);
   }
 }
+
+/* 
 */
 /*# sourceMappingURL=style.css.map */
