--- a/style/style.scss
+++ b/style/style.scss
@@ -9,7 +9,7 @@ $fontFamily: "";
 //<Variables>=================================================================
 $minWidth: 320px;
 $maxWidth: 1920px;
-$maxWidthContainer: 1440;
+$maxWidthContainer: 1316;
 $md1: $maxWidthContainer + 10;
 $md2: 991.98;
 $md3: 767.98;
@@ -52,28 +52,96 @@ body {
 //<CONNECTING FILES STYLES PAGES AND ELEMENTS>=================================================================
 
 //< START COMMON STYLE BLOCKS >=================================================================
-
+.wrapper {
+  background: $dark;
+}
 //< END COMMON STYLE BLOCKS >=================================================================
 //< START HEADER >=================================================================
 
-//< END HEADER >=================================================================
-//< START CONTENT >=================================================================
+.header {
+  &__content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 50px;
+    left: 0px;
+  }
+  &__body {
+    @media (min-width: $md4+px) {
+      display: flex;
+      justify-content: space-between;
+      max-width: 725px;
+    }
+  }
 
-//< END  CONTENT >=================================================================
-//< START FOOTER >=================================================================
+  &__logo {
+  }
 
-//< END FOOTER >=================================================================
+  &__menu {
+  }
+}
+.menu {
+  &__icon {
+  }
 
-// burger of three spans
+  &__body {
+    @media (max-width: $md4+px) {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0px;
+      left: 0px;
+      text-align: center;
+      overflow: auto;
+      padding: 60px 0px 0px 0px;
+      background-color: rgba(57, 62, 58, 0.8);
+      transform: translate(0px, -100%);
+      transition: all 0.6s ease 0s;
+    }
+    &.active {
+      transform: translate(0px, 0%);
+    }
+  }
 
-/* 
+  &__list {
+    display: flex;
+    li {
+      margin: 0px 0px 0px 40px;
+    }
+    @media (max-width: $md4+px) {
+      flex-direction: column;
+      li {
+        margin: 0px 0px 30px 0px;
+      }
+    }
+  }
+
+  &__link {
+    color: $silver;
+    font-size: 24px;
+    line-height: 28 / 24 * 100%;
+    span {
+      color: $Mouse;
+    }
+    transition: all 0.3s ease 0s;
+    @media (min-width: $md2+px) {
+      &:hover {
+        color: $Mouse;
+        line-height: 28 / 24 * 100%;
+        span {
+          color: $silver;
+        }
+      }
+    }
+  }
+}
 .icon-menu {
   display: none;
-  @media (max-width: $md3+px) {
+  @media (max-width: $md4+px) {
     display: block;
     //position: relative;
     position: absolute;
-    top: 18px;
+    top: 9px;
     right: 10px;
     width: 30px;
     height: 18px;
@@ -87,7 +155,7 @@ body {
       position: absolute;
       width: 100%;
       height: 2px;
-      background-color: #000;
+      background-color: $silver;
       &:first-child {
         top: 0px;
       }
@@ -113,4 +181,16 @@ body {
     }
   }
 }
+
+//< END HEADER >=================================================================
+//< START CONTENT >=================================================================
+
+//< END  CONTENT >=================================================================
+//< START FOOTER >=================================================================
+
+//< END FOOTER >=================================================================
+
+// burger of three spans
+
+/* 
 */
