--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 /*Обнуление*/
 * {
   padding: 0;
@@ -40,7 +41,7 @@ body {
 body {
   line-height: 1;
   font-size: 14px;
-  font-family: "";
+  font-family: "Roboto", sans-serif;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -49,7 +50,7 @@ body {
 input,
 button,
 textarea {
-  font-family: "";
+  font-family: "Roboto", sans-serif;
 }
 
 input::-ms-clear {
@@ -94,8 +95,9 @@ h6 {
 
 /*--------------------*/
 body {
-  color: #000;
+  color: #666b67;
   font-size: 14px;
+  overflow: hidden;
 }
 
 body._lock {
@@ -121,21 +123,6 @@ body._lock {
   margin: 0px auto;
 }
 
-/* .ibg {
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  position: relative;
-}
-.ibg img {
-  width: 0;
-  height: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  visibility: hidden;
-} */
 .ibg {
   background-position: center;
   background-size: cover;
@@ -144,25 +131,46 @@ body._lock {
 }
 
 .ibg img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/* .ibg img {
+  position: absolute;
   width: 0;
   height: 0;
-  position: absolute;
   top: 0;
   left: 0;
   opacity: 0;
   visibility: hidden;
-}
-
+} */
 .wrapper {
   background: #393e3a;
+}
+
+[class*=" _icon-"] {
+  font-size: 30px;
+  color: #607966;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+[class*=" _icon-"]:hover {
+  color: #c4c4c4;
 }
 
 .header__content {
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 50px;
+  top: 0px;
   left: 0px;
+  margin: 50px 0px 0px 0px;
 }
 
 @media (min-width: 479.98px) {
@@ -173,6 +181,9 @@ body._lock {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     max-width: 725px;
   }
 }
@@ -289,6 +300,131 @@ body._lock {
     -webkit-transform: rotate(45deg);
             transform: rotate(45deg);
     bottom: calc(50% - 1px);
+  }
+}
+
+.page {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.footer__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 65px 81px;
+  background-color: #2c302f;
+}
+
+@media (max-width: 991.98px) {
+  .footer__body {
+    display: block;
+    padding: 65px 81px 18px;
+  }
+}
+
+.footer__row {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 567px;
+          flex: 0 0 567px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (max-width: 991.98px) {
+  .footer__row {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+.footer__column {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+}
+
+@media (max-width: 991.98px) {
+  .footer__column {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
+  }
+}
+
+.column-footer__headline {
+  font-size: 24px;
+  line-height: 116.66667%;
+  text-transform: uppercase;
+  color: #666b67;
+  margin: 0px 0px 50px 0px;
+}
+
+.column-footer__link {
+  display: block;
+  margin: 0px 0px 24px 0px;
+  font-size: 18px;
+  line-height: 116.66667%;
+  text-transform: capitalize;
+  color: #666b67;
+}
+
+.column-footer__link:last-child {
+  margin: 0;
+}
+
+.column-footer__brand {
+  display: inline-block;
+  margin: 0px 0px 17px -65px;
+}
+
+@media (max-width: 991.98px) {
+  .column-footer__brand {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .column-footer__list {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+}
+
+.column-footer__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+@media (max-width: 991.98px) {
+  .column-footer__social {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 17px 0px 0px 0px;
+  }
+}
+
+.column-footer__icon {
+  margin: 184px 0px 0px 44px;
+}
+
+@media (max-width: 991.98px) {
+  .column-footer__icon {
+    margin: 0px 22px;
   }
 }
 
